kubernetes/apps/homepage/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tailscale
  namespace: homepage
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homepage
      port:
        number: 3000
  tls:
    - hosts:
        - homepage
